--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>742</width>
-    <height>466</height>
+    <width>719</width>
+    <height>454</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="resource.qrc">
-    <normaloff>:/rec/img/icon_application.png</normaloff>:/rec/img/icon_application.png</iconset>
+    <normaloff>:/img/icon_application.png</normaloff>:/img/icon_application.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="contextMenuPolicy">
@@ -44,7 +44,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QListWidget" name="Equipments"/>
+          <widget class="QListWidget" name="listWidget"/>
          </item>
          <item>
           <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -114,7 +114,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>742</width>
+     <width>719</width>
      <height>21</height>
     </rect>
    </property>
@@ -135,6 +135,7 @@
     </property>
     <addaction name="open_equipment_creator"/>
     <addaction name="add_equipment"/>
+    <addaction name="delete_equipment"/>
    </widget>
    <addaction name="menu"/>
    <addaction name="menu_2"/>
@@ -157,7 +158,7 @@
   <action name="create">
    <property name="icon">
     <iconset resource="resource.qrc">
-     <normaloff>:/rec/img/create new.png</normaloff>:/rec/img/create new.png</iconset>
+     <normaloff>:/img/create new.png</normaloff>:/img/create new.png</iconset>
    </property>
    <property name="text">
     <string>Создать проект</string>
@@ -166,7 +167,7 @@
   <action name="open">
    <property name="icon">
     <iconset resource="resource.qrc">
-     <normaloff>:/rec/img/open.png</normaloff>:/rec/img/open.png</iconset>
+     <normaloff>:/img/open.png</normaloff>:/img/open.png</iconset>
    </property>
    <property name="text">
     <string>Открыть проект</string>
@@ -175,7 +176,7 @@
   <action name="save">
    <property name="icon">
     <iconset resource="resource.qrc">
-     <normaloff>:/rec/img/save.png</normaloff>:/rec/img/save.png</iconset>
+     <normaloff>:/img/save.png</normaloff>:/img/save.png</iconset>
    </property>
    <property name="text">
     <string>Сохранить</string>
@@ -184,7 +185,7 @@
   <action name="close">
    <property name="icon">
     <iconset resource="resource.qrc">
-     <normaloff>:/rec/img/exit.png</normaloff>:/rec/img/exit.png</iconset>
+     <normaloff>:/img/exit.png</normaloff>:/img/exit.png</iconset>
    </property>
    <property name="text">
     <string>Выйти</string>
@@ -196,7 +197,7 @@
    </property>
    <property name="icon">
     <iconset resource="resource.qrc">
-     <normaloff>:/rec/img/create equip.png</normaloff>:/rec/img/create equip.png</iconset>
+     <normaloff>:/img/create equip.png</normaloff>:/img/create equip.png</iconset>
    </property>
    <property name="text">
     <string>Создать оборудование</string>
@@ -205,10 +206,15 @@
   <action name="add_equipment">
    <property name="icon">
     <iconset resource="resource.qrc">
-     <normaloff>:/rec/img/add.png</normaloff>:/rec/img/add.png</iconset>
+     <normaloff>:/img/add.png</normaloff>:/img/add.png</iconset>
    </property>
    <property name="text">
     <string>Добавить оборудование</string>
+   </property>
+  </action>
+  <action name="delete_equipment">
+   <property name="text">
+    <string>Удалить оборудование</string>
    </property>
   </action>
  </widget>
