--- a/resource.qrc
+++ b/resource.qrc
@@ -1,46 +1,26 @@
 <RCC>
-    <qresource prefix="/rec">
-        <file>equipmentcreator.h</file>
-        <file>main.cpp</file>
-        <file>mainwindow.cpp</file>
-        <file>mainwindow.h</file>
-        <file>img/create new.png</file>
-        <file>img/exit.png</file>
-        <file>img/open.png</file>
-        <file>img/save.png</file>
+    <qresource prefix="/img"/>
+    <qresource prefix="/">
         <file>img/add.png</file>
-        <file>img/create equip.png</file>
-        <file>img/edit.png</file>
-        <file>img/save as.png</file>
-        <file>img/cyan_in.png</file>
-        <file>img/cyan_out.png</file>
-        <file>img/green_in.png</file>
-        <file>img/green_out.png</file>
-        <file>img/yellow_in.png</file>
-        <file>img/yellow_out.png</file>
         <file>img/blue_in.png</file>
         <file>img/blue_out.png</file>
+        <file>img/BlueIn.png</file>
+        <file>img/create equip.png</file>
+        <file>img/create new.png</file>
+        <file>img/cyan_in.png</file>
+        <file>img/cyan_out.png</file>
+        <file>img/edit.png</file>
+        <file>img/exit.png</file>
+        <file>img/green_in.png</file>
+        <file>img/green_out.png</file>
+        <file>img/icon_application.png</file>
+        <file>img/open.png</file>
         <file>img/red_in.png</file>
         <file>img/red_out.png</file>
-        <file>img/icon_application.png</file>
-        <file>equipmentcreator.cpp</file>
-        <file>projects/connections.xml</file>
-        <file>projects/equipment.xml</file>
-        <file>projects/Новый текстовый документ (2).txt</file>
-        <file>projects/Новый текстовый документ.txt</file>
-        <file>addequipment.cpp</file>
-        <file>addequipment.h</file>
-        <file>body.cpp</file>
-        <file>body.h</file>
-        <file>createproject.cpp</file>
-        <file>createproject.h</file>
-        <file>equipment.cpp</file>
-        <file>equipment.h</file>
-        <file>inputconnector.cpp</file>
-        <file>inputconnector.h</file>
-        <file>outputconnector.cpp</file>
-        <file>outputconnector.h</file>
-        <file>selectpath.cpp</file>
-        <file>selectpath.h</file>
+        <file>img/RedIn.png</file>
+        <file>img/save as.png</file>
+        <file>img/save.png</file>
+        <file>img/yellow_in.png</file>
+        <file>img/yellow_out.png</file>
     </qresource>
 </RCC>
